# SocketServer

./: CMakeLists.txt  README.md  Server.h  SocketManager.h  config.cfg  config.cfg.example  main.cpp  main.h  make.sh  run-command.cpp  swap.sh  test.cpp
.github/workflows/: build.yml  cmake.yml  test.yml
app/RunCommand/: RunCommand.cpp  RunCommand.h
app/Server/: Server.cpp  Server.h
cmake/: Finduuid.cmake
lib/: Server.cpp  SocketManager.h
lib/ConfigManager/: ConfigManager.cpp  ConfigManager.h
lib/HashNode/: HashNode.cpp  HashNode.h
lib/HashTable/: HashTable.cpp  HashTable.h
lib/LinkList/: LinkList.cpp  LinkList.h
lib/Server/: Server.cpp  Server.h
lib/SocketManager/: SocketManager.cpp  SocketManager.h
scripts/: compile-gtest-suit.sh  install-dependencies-on-ubuntu-gcc-9.sh  install-dependencies-on-ubuntu.sh
